colorpalette.css
@import url('https://fonts.googleapis.com/css2?family=Quattrocento&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: Quattrocento;
}

/* body {
    perspective: 1000px;
}

#button-tabs, #button-text, #color-list, #footer {
    transform: rotateY(45deg) rotateX(45deg);
} */

#color-list {
    display:flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

#color-list li {
    list-style-type: none;
    min-width: 20%;
    line-height: 50rem;
    text-align: center;
    font-size: 20px;
}

#color-list li:first-child {
    background-color:rgb(255,0,0);
}

#color-list li:nth-child(2) {
    background-color: rgb(0,0,255);
}

#color-list li:nth-child(3) {
    background-color: rgb(255,255,0);
}

#color-list li:nth-child(4) {
    background-color: rgb(0,255,0);
}

#color-list li:nth-child(5) {
    background-color: rgb(255,0,255);
}

#locks-and-clipboards {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    margin-top: 1rem;
}

#locks-and-clipboards button {
    margin: auto;
    border: white;
    background-color: white;
}

#locks-and-clipboards button img {
    width: 40px;
    height: 40px;
}

#locks-and-clipboards button img:hover {
    opacity: 0.5;
}

#button-tabs {
    display: flex;        
    justify-content: space-evenly;       
    margin-top: 2rem;
}

#button-tabs button {
    font-size: 30px;
    background-color: transparent;
    border:none;
    background: white;
    box-shadow: 0 0 10px black;
    /* padding: 5px; */
    border-radius: 15px;
    color: black;
    cursor:pointer;
    margin-left: 3rem;              
    margin-right: 3rem;  
    transition: padding 0.5s ease;        
}

#button-tabs button:hover {
    box-shadow: 0 0 25px #000000;
    /* transform: rotateZ(45deg) skew(45deg); */
    padding: 15px;
    transition: all 0.5s ease;
}

#button-tabs button img {
    width: 20%;
}

#button-text {
    display:flex;
    justify-content: space-evenly;
    margin-top: 1rem;
}

#button-text h1 {                  
    margin-right: 9rem;
    margin-left: 3rem;
}

#save-popup {
    position:absolute;
    left:50%;
    top:20%;
    transform: translate(-50%, -50%);
    display: none;
    border: 5px solid black;
    border-radius: 15px;
    padding: 20px;
    background-color:white;
}

#name-of-palette {
    margin-top: 1rem;
    font-size: 1.5rem;
    border-radius: 10px;
    border: 3px solid black;
    /* background-color: black;
    color: white; */
    padding:10px;
    outline: none;
    /* background-image: linear-gradient(to right, #00ff1e ,#00fbff) */
}

#submit {
    /* background-image: linear-gradient(to right, #00ff1e ,#00fbff); */
    width: 3rem;
    height: 3rem;
    font-size: large;
    padding:3pxrem;
    border: 3px solid black;
    border-radius: 10px;
    background-color: white;
    margin-left: 0.3rem;
}

#submit:hover {
    background-color: rgb(233, 233, 233);
    color: rgb(0, 0, 0);
}

#library-container {
    display: flex;
    justify-content: center;
}

#library-popup {
    position:absolute;
    top:10%;
    display: none;
    border: 5px solid black;
    border-radius: 15px;
    padding: 20px;
    background-color:white;
}

#saved-palettes span {
    display: inline-block;
}

#saved-palettes li {
    list-style-type: none;
    margin-right: 1rem;
    margin-top: 1.3rem;
    display:flex;
    flex-direction: right;
}

#saved-palettes li button {
    border:none;
    cursor:pointer;
    font-size:1.2rem;
    padding: 0.5rem;
    margin-bottom: 0.5rem;
    border-radius: 8px;
    margin-right: 0.7rem;
    background: white;
    box-shadow: 0 0 10px black;
    transition: box-shadow 0.5s ease;
}

#saved-palettes li button:hover {
    color: black;
    box-shadow: 0 0 25px black;
    transition: box-shadow 1s ease;
}

.delete-from-library {
    margin-left: 1rem;
    color: red;
    margin-top:0.3rem;
    cursor:pointer;
}

.cancel {
    position:relative;
    left: 98%;
    top:98%;
    transform: translate(-50%, -50%);
    border:none;
    font-size: 30px;
    background-color: white;
    cursor: pointer;
}

.cancel:hover {
    color:rgb(142, 128, 155);
}

#clipboard-popup {
    background-color: black;
    position: absolute;
    border-radius: 20px;
    bottom:7%;
    left:50%;
    transform: translate(-50%,0%);
    padding: 20px;
    opacity: 0;
    transition: opacity 1s ease;
    color: white;
    font-size: 1.5em;
}

/* #clipboard-text {

} */

#footer {
    display:flex;
    flex-direction: row;
    justify-content: space-between;
    position:absolute;
    bottom:0;
    width:100%;
    box-shadow: 0px -5px 10px #c4c4c4;
}

#footer p {
    margin: 0.4rem 1rem;
    padding: 1rem;
}

/* TODO LIST */

/* FIX CLIPBOARD POPUP OPACITY ISSUE */
/* MAKE LOCALSTORAGE WORK WITH TRANSFERTOLIBRARY() FUNCTION */
/* ADJUST COLORS WITH HSL */
/* DEPLOY */

/* GROUP JS FILES WITH IMPORT + EXPORT */
/* GSAP CARD FLIP */
/* CHANGE IDS TO CLASSES */
/* HTML INPUT PLACEHOLDER */

